Added Forms Authentication to Blazor App.

--- a/src/WebFormsApplicationWithBlazorApplication/BlazorAppWithFormsAuthentication/Pages/Index.razor
+++ b/src/WebFormsApplicationWithBlazorApplication/BlazorAppWithFormsAuthentication/Pages/Index.razor
@@ -5,3 +5,8 @@
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+<p>Authorize view below:</p>
+<AuthorizeView>
+    <Authorized>You are authorized.</Authorized>
+    <NotAuthorized>You are not authorized.</NotAuthorized>
+</AuthorizeView>
